fix bugs, update db4

--- a/LazzyBee/Info.plist
+++ b/LazzyBee/Info.plist
@@ -19,11 +19,19 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3.1</string>
+	<string>1.3.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
 	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.born2go.lazzybee</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>lazzybee</string>
+			</array>
+		</dict>
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
@@ -40,7 +48,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>5</string>
+	<string>2</string>
 	<key>FacebookAppID</key>
 	<string>754889477966743</string>
 	<key>FacebookDisplayName</key>
